# rust-verbio-speech-center

./: .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: ci.yaml  lint.yaml
batch-client/: Cargo.toml
batch-client/src/: log.rs  main.rs  worker.rs
cli-client/: Cargo.toml
cli-client/src/: main.rs  recognition.rs  synthesis.rs
speech-center-client/: Cargo.toml  build.rs
speech-center-client/proto/: gateway.proto
speech-center-client/src/: client.rs  csr_grpc_gateway.rs  error.rs  lib.rs  recognizer_client.rs  speechcenter.tts.v1.rs  synthesizer_client.rs
