[package]
name = "speech-center-client"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1.1.0"
async-stream = "0.3"
prost = "0.9"
thiserror = "1"
tonic = { version = "0.6.2", features = ["tls", "tls-roots"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[build-dependencies]
tonic-build = "0.6.2"